diesel_compile_tests/tests/fail/cannot_load_default_select_with_group_by.stderr
error[E0271]: type mismatch resolving `<columns::name as IsContainedInGroupBy<columns::id>>::Output == diesel::expression::is_contained_in_group_by::Yes`
    --> tests/fail/cannot_load_default_select_with_group_by.rs:16:10
     |
16   |         .load::<(i32, String)>(&mut conn);
     |          ^^^^ expected struct `diesel::expression::is_contained_in_group_by::Yes`, found struct `diesel::expression::is_contained_in_group_by::No`
     |
note: required because of the requirements on the impl of `ValidGrouping<columns::name>` for `columns::id`
    --> tests/fail/cannot_load_default_select_with_group_by.rs:5:1
     |
5    | / table! {
6    | |     users {
7    | |         id -> Integer,
8    | |         name -> Text,
9    | |     }
10   | | }
     | |_^
     = note: 1 redundant requirement hidden
     = note: required because of the requirements on the impl of `ValidGrouping<columns::name>` for `(columns::id, columns::name)`
     = note: required because of the requirements on the impl of `Query` for `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::DefaultSelectClause<FromClause<users::table>>, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::NoWhereClause, diesel::query_builder::order_clause::NoOrderClause, diesel::query_builder::limit_offset_clause::LimitOffsetClause<diesel::query_builder::limit_clause::NoLimitClause, diesel::query_builder::offset_clause::NoOffsetClause>, diesel::query_builder::group_by_clause::GroupByClause<columns::name>>`
     = note: required because of the requirements on the impl of `LoadQuery<'_, _, (i32, std::string::String)>` for `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::DefaultSelectClause<FromClause<users::table>>, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::NoWhereClause, diesel::query_builder::order_clause::NoOrderClause, diesel::query_builder::limit_offset_clause::LimitOffsetClause<diesel::query_builder::limit_clause::NoLimitClause, diesel::query_builder::offset_clause::NoOffsetClause>, diesel::query_builder::group_by_clause::GroupByClause<columns::name>>`
note: required by a bound in `diesel::RunQueryDsl::load`
    --> $DIESEL/src/query_dsl/mod.rs
     |
     |         Self: LoadQuery<'query, Conn, U>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `diesel::RunQueryDsl::load`
     = note: this error originates in the macro `$crate::__diesel_column` which comes from the expansion of the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)
